bison_files/parser.output
Terminals unused in grammar

    PRINT


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: %empty
    2        | INPUT

    3 INPUT: RUN EXPRESSION
    4      | INPUT RUN EXPRESSION

    5 INACTION: LPARENTHESES RPARENTHESES

    6 SOLO_OBJECT: LIST
    7            | CHANNEL

    8 SOLO: CHANNEL SEND SOLO_OBJECT
    9     | CHANNEL RECEIVE SOLO_OBJECT
   10     | CHANNEL REPLICATED_RECEIVE SOLO_OBJECT

   11 EXPRESSION: LPARENTHESES AGENT RPARENTHESES

   12 AGENT: INACTION
   13      | SOLO
   14      | AGENT COMPOSITION AGENT
   15      | BIND LIST EXPRESSION
   16      | MATCH LIST LIST EXPRESSION

   17 INNER_LIST: CHANNEL
   18           | INNER_LIST COMMA CHANNEL

   19 LIST: LBRACKET RBRACKET
   20     | LBRACKET INNER_LIST RBRACKET


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CHANNEL (258) 7 8 9 10 17 18
    RUN (259) 3 4
    BIND (260) 15
    PRINT (261)
    COMMA (262) 18
    MATCH (263) 16
    LPARENTHESES (264) 5 11
    RPARENTHESES (265) 5 11
    LBRACKET (266) 19 20
    RBRACKET (267) 19 20
    SEND (268) 8
    REPLICATED_RECEIVE (269) 10
    RECEIVE (270) 9
    COMPOSITION (271) 14


Nonterminals, with rules where they appear

    $accept (17)
        on left: 0
    PROGRAM (18)
        on left: 1 2
        on right: 0
    INPUT (19)
        on left: 3 4
        on right: 2 4
    INACTION (20)
        on left: 5
        on right: 12
    SOLO_OBJECT (21)
        on left: 6 7
        on right: 8 9 10
    SOLO (22)
        on left: 8 9 10
        on right: 13
    EXPRESSION (23)
        on left: 11
        on right: 3 4 15 16
    AGENT (24)
        on left: 12 13 14 15 16
        on right: 11 14
    INNER_LIST (25)
        on left: 17 18
        on right: 18 20
    LIST (26)
        on left: 19 20
        on right: 6 15 16


State 0

    0 $accept: . PROGRAM $end

    RUN  shift, and go to state 1

    $default  reduce using rule 1 (PROGRAM)

    PROGRAM  go to state 2
    INPUT    go to state 3


State 1

    3 INPUT: RUN . EXPRESSION

    LPARENTHESES  shift, and go to state 4

    EXPRESSION  go to state 5


State 2

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 6


State 3

    2 PROGRAM: INPUT .
    4 INPUT: INPUT . RUN EXPRESSION

    RUN  shift, and go to state 7

    $default  reduce using rule 2 (PROGRAM)


State 4

   11 EXPRESSION: LPARENTHESES . AGENT RPARENTHESES

    CHANNEL       shift, and go to state 8
    BIND          shift, and go to state 9
    MATCH         shift, and go to state 10
    LPARENTHESES  shift, and go to state 11

    INACTION  go to state 12
    SOLO      go to state 13
    AGENT     go to state 14


State 5

    3 INPUT: RUN EXPRESSION .

    $default  reduce using rule 3 (INPUT)


State 6

    0 $accept: PROGRAM $end .

    $default  accept


State 7

    4 INPUT: INPUT RUN . EXPRESSION

    LPARENTHESES  shift, and go to state 4

    EXPRESSION  go to state 15


State 8

    8 SOLO: CHANNEL . SEND SOLO_OBJECT
    9     | CHANNEL . RECEIVE SOLO_OBJECT
   10     | CHANNEL . REPLICATED_RECEIVE SOLO_OBJECT

    SEND                shift, and go to state 16
    REPLICATED_RECEIVE  shift, and go to state 17
    RECEIVE             shift, and go to state 18


State 9

   15 AGENT: BIND . LIST EXPRESSION

    LBRACKET  shift, and go to state 19

    LIST  go to state 20


State 10

   16 AGENT: MATCH . LIST LIST EXPRESSION

    LBRACKET  shift, and go to state 19

    LIST  go to state 21


State 11

    5 INACTION: LPARENTHESES . RPARENTHESES

    RPARENTHESES  shift, and go to state 22


State 12

   12 AGENT: INACTION .

    $default  reduce using rule 12 (AGENT)


State 13

   13 AGENT: SOLO .

    $default  reduce using rule 13 (AGENT)


State 14

   11 EXPRESSION: LPARENTHESES AGENT . RPARENTHESES
   14 AGENT: AGENT . COMPOSITION AGENT

    RPARENTHESES  shift, and go to state 23
    COMPOSITION   shift, and go to state 24


State 15

    4 INPUT: INPUT RUN EXPRESSION .

    $default  reduce using rule 4 (INPUT)


State 16

    8 SOLO: CHANNEL SEND . SOLO_OBJECT

    CHANNEL   shift, and go to state 25
    LBRACKET  shift, and go to state 19

    SOLO_OBJECT  go to state 26
    LIST         go to state 27


State 17

   10 SOLO: CHANNEL REPLICATED_RECEIVE . SOLO_OBJECT

    CHANNEL   shift, and go to state 25
    LBRACKET  shift, and go to state 19

    SOLO_OBJECT  go to state 28
    LIST         go to state 27


State 18

    9 SOLO: CHANNEL RECEIVE . SOLO_OBJECT

    CHANNEL   shift, and go to state 25
    LBRACKET  shift, and go to state 19

    SOLO_OBJECT  go to state 29
    LIST         go to state 27


State 19

   19 LIST: LBRACKET . RBRACKET
   20     | LBRACKET . INNER_LIST RBRACKET

    CHANNEL   shift, and go to state 30
    RBRACKET  shift, and go to state 31

    INNER_LIST  go to state 32


State 20

   15 AGENT: BIND LIST . EXPRESSION

    LPARENTHESES  shift, and go to state 4

    EXPRESSION  go to state 33


State 21

   16 AGENT: MATCH LIST . LIST EXPRESSION

    LBRACKET  shift, and go to state 19

    LIST  go to state 34


State 22

    5 INACTION: LPARENTHESES RPARENTHESES .

    $default  reduce using rule 5 (INACTION)


State 23

   11 EXPRESSION: LPARENTHESES AGENT RPARENTHESES .

    $default  reduce using rule 11 (EXPRESSION)


State 24

   14 AGENT: AGENT COMPOSITION . AGENT

    CHANNEL       shift, and go to state 8
    BIND          shift, and go to state 9
    MATCH         shift, and go to state 10
    LPARENTHESES  shift, and go to state 11

    INACTION  go to state 12
    SOLO      go to state 13
    AGENT     go to state 35


State 25

    7 SOLO_OBJECT: CHANNEL .

    $default  reduce using rule 7 (SOLO_OBJECT)


State 26

    8 SOLO: CHANNEL SEND SOLO_OBJECT .

    $default  reduce using rule 8 (SOLO)


State 27

    6 SOLO_OBJECT: LIST .

    $default  reduce using rule 6 (SOLO_OBJECT)


State 28

   10 SOLO: CHANNEL REPLICATED_RECEIVE SOLO_OBJECT .

    $default  reduce using rule 10 (SOLO)


State 29

    9 SOLO: CHANNEL RECEIVE SOLO_OBJECT .

    $default  reduce using rule 9 (SOLO)


State 30

   17 INNER_LIST: CHANNEL .

    $default  reduce using rule 17 (INNER_LIST)


State 31

   19 LIST: LBRACKET RBRACKET .

    $default  reduce using rule 19 (LIST)


State 32

   18 INNER_LIST: INNER_LIST . COMMA CHANNEL
   20 LIST: LBRACKET INNER_LIST . RBRACKET

    COMMA     shift, and go to state 36
    RBRACKET  shift, and go to state 37


State 33

   15 AGENT: BIND LIST EXPRESSION .

    $default  reduce using rule 15 (AGENT)


State 34

   16 AGENT: MATCH LIST LIST . EXPRESSION

    LPARENTHESES  shift, and go to state 4

    EXPRESSION  go to state 38


State 35

   14 AGENT: AGENT . COMPOSITION AGENT
   14      | AGENT COMPOSITION AGENT .

    $default  reduce using rule 14 (AGENT)


State 36

   18 INNER_LIST: INNER_LIST COMMA . CHANNEL

    CHANNEL  shift, and go to state 39


State 37

   20 LIST: LBRACKET INNER_LIST RBRACKET .

    $default  reduce using rule 20 (LIST)


State 38

   16 AGENT: MATCH LIST LIST EXPRESSION .

    $default  reduce using rule 16 (AGENT)


State 39

   18 INNER_LIST: INNER_LIST COMMA CHANNEL .

    $default  reduce using rule 18 (INNER_LIST)
